; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/dinput/extr_joystick.c_get_hwnd.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/dinput/extr_joystick.c_get_hwnd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @get_hwnd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_hwnd() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @GetForegroundWindow()
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* %1, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %7, label %5

5:                                                ; preds = %0
  %6 = call i64 (...) @GetDesktopWindow()
  store i64 %6, i64* %1, align 8
  br label %7

7:                                                ; preds = %5, %0
  %8 = load i64, i64* %1, align 8
  ret i64 %8
}

declare dso_local i64 @GetForegroundWindow(...) #1

declare dso_local i64 @GetDesktopWindow(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
